--- a/index.html
+++ b/index.html
@@ -9,39 +9,51 @@
 </head>
 <body>
     <div class="container">
-        <div id="telaGame">
-            <div id="p1"></div>
-            <div id="bola"></div>
-            <div id="p2"></div>
-        </div>
+        <canvas id="telaGame" width="800px" height="500px">
+
+        </canvas>
         <div id="botoes">
             <button id="up">Up</button>
             <button id="down">Down</button>
         </div>
     </div>
     <script>
-        var telaGame = document.getElementById('telaGame');
-        var p1 = document.getElementById('P1');
-        var p2 = document.getElementById('P2');
-        var bola = document.getElementById('bola');
-        var btnUp = document.getElementById('up');
-        var btnDown = document.getElementById('down');
+        var canvas = document.getElementById("telaGame");
+        var ctx = canvas.getContext("2d");
 
-        btnUp.addEventListener('Click',moverP1cima);
-        btnDown.addEventListener('Click', moverP1baixo);
+        var p1;
+        var p2;
+        var bola;
 
-        var cima = 1;
-        var baixo = -1;
-        var velocidade = 5;
-        var posiY;
-
-        function moverP1cima(){
-            posiY += (cima*velocidade);
-            p1.style.top = posiY+'px';
+        p1={
+            x: 10,
+            y: (canvas.height / 2) - 80,
+            altura: 160,
+            largura: 15
         }
-        function moverP1baixo(){
-            
+
+        p2={
+            x: 775,
+            y: (canvas.height / 2) - 80,
+            altura: 160,
+            largura: 15
         }
+
+        bola={
+            x: (canvas.width /2) - 15,
+            y: (canvas.height / 2) - 15,
+            altura: 30,
+            largura: 30
+        }
+       function desenha(){
+           ctx.fillStyle = "white";
+           ctx.fillRect(p1.x, p1.y, p1.largura, p1.altura);
+
+           ctx.fillRect(p2.x, p2.y, p2.largura, p2.altura);
+
+           ctx.fillRect(bola.x, bola.y, bola.largura, bola.altura);
+       }
+       desenha();
     </script>
 </body>
 </html>
